--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -1,4 +1,20 @@
-  <div class= "side-top">
+<div class= "side-top">
+  <div class="header-name">
+    <a href="#">Tom</a>
   </div>
-  <div class= "side-bot">
+  <div class="chat-create">
+    <a href="#">チャットを作成する</a>
   </div>
+</div>
+<div class= "side-bot">
+  <div class="room">
+    <div class="room-name">
+      <a href="#">techroom1</a>
+    </div>
+  </div>
+  <div class="room">
+    <div class="room-name">
+      <a href="#">techroom2</a>
+    </div>
+  </div>
+</div>
