--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -58,16 +58,105 @@
 .main-top {
   height: 100px;
   padding: 0 40px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.room-title {
+  font-size: 23px;
+  color: #333;
+  margin-top: 36px;
+}
+
+.room-delete {
+  margin-top: 40px;
+}
+
+.room-delete a{
+  color: darkred;
+  padding: 20px;
+  border: 1px solid darkred;
+  text-decoration: none;
 }
 
 .main-mid {
   height: calc(100% - 100px - 90px);
   background-color: #fafafa;
   padding: 46px 40px 0;
+  box-sizing: border-box;
+  overflow: scroll;
+}
+
+.message {
+  margin: 10px 0;
+}
+
+.message-top {
+  display: flex;
+}
+
+.message-name {
+  font-size: 16px;
+  color: #434a54;
+}
+
+.message-time {
+  font-size: 12px;
+  color: #999;
+  margin-left: 10px;
+}
+
+.message-bot {
+  margin-top: 10px;
+}
+
+.message-text {
+  font-size: 14px;
+  color: #434a54;
+  margin-bottom: 40px;
 }
 
 .main-bot {
   height: 90px;
   background-color: #dddddd;
   padding: 20px 40px;
+  display: flex;
+  box-sizing: border-box;
+}
+
+.contact-form {
+  background-color: white;
+  display: flex;
+  width: 100%;
+}
+
+.form-text {
+  padding-left: 10px;
+  height: 50px;
+  width: 100%;
+  border: none;
+}
+
+.form-button {
+  color: white;
+  background-color: #38aef0;
+  font-size: 16px;
+  height: 50px;
+  padding: 0 20px;
+  margin-left: 15px;
+  border: none;
+}
+
+.form-image {
+  font-size: 12px;
+  background-color: lightblue;
+  color: white;
+  padding: 12px;
+  width: 60px;
+  margin: 5px 10px;
+  text-align: center;
+}
+
+.hidden {
+  display: none;
 }
