--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,6 +1,50 @@
-  <div class= "main-top">
+<div class= "main-top">
+  <div class="room-title">
+    hogefuga
   </div>
-  <div class= "main-mid">
+  <div class="room-delete">
+    <a href="#">チャットを終了する</a>
   </div>
-  <div class= "main-bot">
+</div>
+<div class= "main-mid">
+  <div class="message">
+    <div class="message-top">
+      <div class="message-name">
+        Tom
+      </div>
+      <div class="message-time">
+        2020/3/31(Wed) 12:43:30
+      </div>
+    </div>
+    <div class="message-bot">
+      <div class="message-text">
+        おはよう
+      </div>
+    </div>
   </div>
+    <div class="message">
+    <div class="message-top">
+      <div class="message-name">
+        Tom
+      </div>
+      <div class="message-time">
+        2020/3/31(Wed) 12:47:30
+      </div>
+    </div>
+    <div class="message-bot">
+      <div class="message-text">
+        こんばんわ
+      </div>
+    </div>
+  </div>
+</div>
+<div class= "main-bot">
+  <div class="contact-form">
+    <input placeholder="type a meesage" class="form-text">
+    <label class="form-image">
+      <span class="image-file">画像</span>
+      <input type="file" class="hidden">
+    </label>
+  </div>
+    <input type="submit" value="送信" class="form-button">
+</div>
