--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,9 +1,13 @@
 <div class= "main-top">
-  <div class="room-title">
-    hogefuga
+  <div class="left-header">
+    <div class="room-title">
+      <%= @room.name%>
+    </div>
   </div>
-  <div class="room-delete">
-    <a href="#">チャットを終了する</a>
+  <div class="right-header">
+    <div class="room-delete">
+      <a href="#">チャットを終了する</a>
+    </div>
   </div>
 </div>
 <div class= "main-mid">
